--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "lucide-react": "^0.503.0",
     "next": "15.1.6",
     "postcss-cli": "^11.0.0",
     "react": "^19.0.0",
