Using logger instead of console.log

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint --fix",
     "prebuild": "tsc --noEmit",
-    "predeploy": "npm run lint && npm run prebuild && next build"
+    "predeploy": "npm run lint && npm run prebuild && next build",
+    "fix-console-logs": "node scripts/replace-console-logs.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
