Added admin page

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prebuild": "tsc --noEmit",
     "predeploy": "npm run lint && npm run prebuild && next build",
     "fix-console-logs": "node scripts/replace-console-logs.mjs",
-    "db:migrate": "node scripts/apply-migration.mjs"
+    "db:migrate": "node scripts/apply-migration.mjs",
+    "db:migrate:admin": "node scripts/apply-migration.mjs admin-migration.sql"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
