--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "predeploy": "npm run lint && npm run prebuild && next build",
     "fix-console-logs": "node scripts/replace-console-logs.mjs",
     "db:migrate": "node scripts/apply-migration.mjs",
-    "db:migrate:admin": "node scripts/apply-migration.mjs admin-migration.sql"
+    "db:migrate:admin": "node scripts/apply-migration.mjs admin-migration.sql",
+    "test": "npx jest --config jest.config.mjs",
+    "test:watch": "npx jest --config jest.config.mjs --watch",
+    "test:coverage": "npx jest --config jest.config.mjs --coverage"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
@@ -26,12 +29,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
