--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test:coverage": "npx jest --config jest.config.mjs --coverage"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.75.1",
     "lucide-react": "^0.503.0",
