--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:optimize": "bash scripts/add-dynamic-config.sh && next build",
+    "build:segment-config": "bash scripts/setup-segment-configs.sh && next build",
+    "build:optimized": "bash scripts/improved-segment-configs.sh && next build",
     "start": "next start",
     "lint": "next lint --fix",
     "prebuild": "echo 'Skipping TypeScript check for faster build'",
