--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
+    "supabase": "^2.24.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
