feat: standardize auth handling and fix excessive logging/Windows build issues
## Major Changes

### 🔧 Authentication Standardization
- Convert dashboard page to client-side auth pattern (eliminates redirect loops)
- Refactor admin page to use consistent client-side auth with proper error handling
- Create AdminClient component to separate UI from auth logic
- Standardize auth flow across all protected pages (dashboard, profile, admin)

### 🚫 Fix Excessive Logging & Auth Spam
- Add toggleable logger in src/lib/logger.ts with NEXT_PUBLIC_LOG_LEVEL control
- Update middleware to use new logger and skip unnecessary routes
- Remove repeated session polling from Providers.tsx, Header.tsx, and homepage
- Disable excessive Supabase session logging while maintaining functionality

### 🪟 Windows Build Fixes
- Disable React Strict Mode to prevent double execution in development
- Disable TraceNextServerPlugin to fix Windows .next\trace EPERM errors
- Clean up .next artifacts and optimize build configuration

### ⚡ Performance & Code Quality
- Optimize Supabase auth configuration (autoRefreshToken, detectSessionInUrl)
- Add proper loading states and error handling across all auth flows
- Improve TypeScript types and component organization
- Ensure consistent client-side auth checking pattern

## Results
- ✅ Clean development console (no auth/session spam)
- ✅ No redirect loops on protected pages
- ✅ Fixed Windows .next\trace EPERM errors
- ✅ Standardized authentication handling across all pages
- ✅ Production build completes successfully
- ✅ Improved developer experience and code maintainability

## Pages Affected
- Index: Public page with auth state listening
- Dashboard: Client-side auth with data fetching
- Admin: Client-side auth with admin role verification
- Profile: Consistent client-side auth pattern
- Leaderboard: Public page (no changes needed)

Co-authored-by: GitHub Copilot <copilot@github.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:fast": "next dev --turbo",
     "build": "next build",
     "build:analyze": "set ANALYZE=true && next build",
     "build:optimize": "bash scripts/add-dynamic-config.sh && next build",
