--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.75.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
     "next": "15.1.6",
     "postcss-cli": "^11.0.0",
