--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^3.4.2",
     "supabase": "^2.24.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
